basic header placeholder

--- a/competition.html
+++ b/competition.html
@@ -16,7 +16,7 @@
     <!--custom-->
     <link rel="stylesheet" href="./css/comp.css" type="text/css">
     <!--fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Poppins:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,700,700i" rel="stylesheet">
   </head>
 
   <body>
@@ -34,8 +34,11 @@
             <div class="pure-pusher">
             <!--SITE CONTENT-->
               <!--HEADER SECTION-->
-              <div class="container-fluid">
-                <h1>Ctrl+Shift</h1>
+              <div class="container-fluid" id="header">
+                <h1 class="red bold">Ctrl<span class="blue">+</span><i>Shift</i></h1>
+                <h2>June 23, 2018 Philadelphia, PA</h2>
+                <h3>Compete in Philadelphia's first citywide coding competition for high school students.</p>
+                <button type="button" class="btn btn-primary brandButton">Register</button>
               </div>
               <div class="noSpace container-fluid">
                 <!--jumbo image-->
@@ -155,7 +158,7 @@
                     <!--button container-->
                     <div class="row" style="padding-top: 5vh;">
                       <div class="col-md-5">
-                        <button type="button" class="btn btn-primary btn-lg btn-block" id="download">Download Schedule</button>
+                        <button type="button" class="btn btn-primary btn-lg btn-block brandButton">Download Schedule</button>
                       </div>
                     </div>
                   </div> <!--end schedule text container-->
