--- a/competition.html
+++ b/competition.html
@@ -167,8 +167,18 @@
 
                 <!--rules-->
                 <div class="row container-fluid noSpace" id="rules">
-                  <h1 class="bold">CONTEST RULES</h1>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Fermentum odio eu feugiat pretium nibh. Ultrices dui sapien eget mi proin sed libero enim. Id velit ut tortor pretium viverra suspendisse potenti nullam. Proin nibh nisl condimentum id venenatis a condimentum vitae sapien. Volutpat blandit aliquam etiam erat velit scelerisque in. Quam viverra orci sagittis eu. Et sollicitudin ac orci phasellus egestas tellus. Pellentesque elit eget gravida cum sociis natoque penatibus. Odio aenean sed adipiscing diam donec. Quam viverra orci sagittis eu volutpat odio. Cras tincidunt lobortis feugiat vivamus at augue eget arcu. Augue lacus viverra vitae congue eu consequat ac felis donec. Diam donec adipiscing tristique risus. Erat velit scelerisque in dictum non consectetur a erat nam. Semper eget duis at tellus. At elementum eu facilisis sed odio morbi quis. Tristique risus nec feugiat in. Ac placerat vestibulum lectus mauris ultrices eros in cursus. Nulla pellentesque dignissim enim sit amet.</p>
+                  <div class="col-md-4">
+                    <h1 class="bold">CONTEST<br>RULES</h1>
+                  </div>
+                  <div class="col-md-8">
+                    <p>Project must fit into one of the three following categories: a business or nonprofit idea,
+                      research/advocacy, or a community service project.</p>
+                    <p>Submitted project must be at least 4 pages (or 4 sections if using a one page design)</p>
+                    <p>Project must be coded in HTML and CSS. JS/jQuery and other frameworks may be used, but are not required</p>
+                    <p>Extra points will be awarded to responsive sites</p>
+                    <p>Site must be coded “by hand” - no use of templates or online site builders (Wix, Weebly, etc.)</p>
+                    <p>Final project must be hosted on Github</p>
+                  </div>
                 </div>
 
                 <!--footer-->
