--- a/competition.html
+++ b/competition.html
@@ -181,12 +181,21 @@
                   </div>
                 </div>
 
+                <!--register-->
+                <div class="container-fluid noSpace" id="register">
+                  <h1 class="bold"><span class="blue">REGISTER FOR</span> <br> <span class="red">CTRL+SHIFT</span></h1>
+
+                </div>
                 <!--footer-->
-                <div class="row container-fluid noSpace" id="compFooter">
-                  <div class="form-group">
-                    <label for="formGroupExampleInput">Example label</label>
-                    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
+                <div class="container-fluid" id="compFooter">
+                  <p class="text-center">leave us your email for Ctrl+Shift info + updates!</p>
+                  <div class="container">
+                    <input type="text" placeholder="your email address">
+                    <button type="button" class="btn btn-primary brandButton" style="display: inline">GO</button>
                   </div>
+                  <div class="container-fluid" style="padding-top: 2vh;">
+                    <p class="text-left" style="font-size: small">2018 © Coded by Kids</p>
+                  <div>
                 </div>
               </div><!--site content-->
             </div>
