styling and links for nav

--- a/competition.html
+++ b/competition.html
@@ -28,7 +28,13 @@
         </label>
 
         <div class="pure-drawer" data-position="left">
-            Put your off canvas content here
+            <div class="container" id="navContainer">
+              <a href="#code"><h2>Prizes</h2></a>
+              <a href="#schedule"><h2>Schedule</h2></a>
+              <a href="#rules"><h2>Rules</h2></a>
+              <a href="#register"><h2>Register</h2></a>
+              <a href="#compFooter"><h2>Stay in touch</h2></a>
+            </div>
         </div>
         <div class="pure-pusher-container">
             <div class="pure-pusher">
