added navbar, bug where it jumps to the top, fixed some sizing and spacing issues

--- a/competition.html
+++ b/competition.html
@@ -12,11 +12,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <!--sidebar nav-->
-    <link rel="stylesheet" href="./css/puredrawer.scss">
+    <link rel="stylesheet" href="./css/puredrawer/puredrawer.scss">
+
     <!--custom-->
     <link rel="stylesheet" href="./css/comp.css" type="text/css">
     <!--fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Poppins:400,700,700i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,700,700i" rel="stylesheet">
   </head>
 
   <body>
@@ -42,8 +43,8 @@
               <!--HEADER SECTION-->
               <div class="container-fluid" id="header">
                 <h1 class="red bold">Ctrl<span class="blue">+</span><i>Shift</i></h1>
-                <h2>June 23, 2018 Philadelphia, PA</h2>
-                <h3>Compete in Philadelphia's first citywide coding competition for high school students.</p>
+                <h1>June 23, 2018 Philadelphia, PA</h1>
+                <h1>Compete in Philadelphia's first citywide coding competition for high school students.</h1>
                 <button type="button" class="btn btn-primary brandButton">Register</button>
               </div>
               <div class="noSpace container-fluid">
@@ -94,77 +95,80 @@
                 <!--schedule-->
                 <div class="row container-fluid noSpace" id="schedule">
                   <div class="col-md-4" id="scheduleImg">
-                    <!--<img src="./img/comp/hero.jpg" class="img-fluid" id="scheduleImg">-->
+
                   </div>
-                  <div class="col-md-8" style="padding-left: 3em; padding-top: 5vh; padding-bottom: 5vh;">
+                  <div class="col-md-8" style="padding-left: 3em; padding-top: 5vh; padding-bottom: 7vh;">
                     <h1 class="bold"><span class="blue">CONTEST</span> <br> <span class="red">SCHEDULE</span></h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent elit ante, venenatis id convallis
-                       non, porta a enim. Aliquam tincidunt sit amet felis quis imperdiet. Sed nec nisl semper, volutpat
-                       quam vel, pretium tellus. Nam vitae aliquam lectus, sit amet molestie ligula.
-                       Integer turpis nisl, imperdiet id fermentum sed, gravida a eros. </p>
+                    <p>All major competition milestones and dates are listed below. Please download the full
+                      competition schedule for more details. <br> *Please note that all participants are required
+                       to attend at least one meetup. </p>
+                    <br>
                     <!--dates-->
                     <div class="container" id="dates">
                       <div class="row justify-content-start">
                         <div class="col-md-5">
-                          <h4>March 1, 2018</h4>
+                          <p>March 1, 2018</p>
                         </div>
                         <div class="col-sm-auto">
-                          <h4 class="text-md-left">Online Application Opens</h4>
+                          <p class="text-md-left">Online Application Opens</p>
                         </div>
                       </div>
                       <div class="row justify-content-start">
                         <div class="col-md-5">
-                          <h4>April 1, 2018</h4>
+                          <p>April 1, 2018</p>
                         </div>
                         <div class="col-sm-auto">
-                          <h4 class="text-md-left">Online Application Closes at 5pm EST</h4>
+                          <p class="text-md-left">Online Application Closes at 5pm EST</p>
                         </div>
                       </div>
                       <div class="row justify-content-start">
                         <div class="col-md-5">
-                          <h4>April 20, 2018</h4>
+                          <p>April 20, 2018</p>
                         </div>
                         <div class="col-sm-auto">
-                          <h4 class="text-md-left">Meetup 1: Refining Your Project/Idea</h4>
+                          <p class="text-md-left">Meetup 1: Refining Your Project/Idea</p>
                         </div>
                       </div>
                       <div class="row justify-content-start">
                         <div class="col-md-5">
-                          <h4>May 18, 2018</h4>
+                          <p>May 18, 2018</p>
                         </div>
                         <div class="col-sm-auto">
-                          <h4 class="text-md-left">Meetup 2:Preparing for Submission</h4>
+                          <p class="text-md-left">Meetup 2:Preparing for Submission</p>
                         </div>
                       </div>
                       <div class="row justify-content-start">
                         <div class="col-md-5">
-                          <h4>June 1, 2018</h4>
+                          <p>June 1, 2018</p>
                         </div>
                         <div class="col-sm-auto">
-                          <h4 class="text-md-left">Online Submission Due (Virtual Round)</h4>
+                          <p class="text-md-left">Online Submission Due (Virtual Round)</p>
                         </div>
                       </div>
                       <div class="row justify-content-start">
                         <div class="col-md-5">
-                          <h4>June 8, 2018</h4>
+                          <p>June 8, 2018</p>
                         </div>
                         <div class="col-sm-auto">
-                          <h4 class="text-md-left">Teams Selected for Live Competition</h4>
+                          <p class="text-md-left">Teams Selected for Live Competition</p>
                         </div>
                       </div>
                       <div class="row justify-content-start">
                         <div class="col-md-5">
-                          <h4>June 23, 2018</h4>
+                          <p>June 23, 2018</p>
                         </div>
                         <div class="col-sm-auto">
-                          <h4 class="text-md-left">Live Competition</h4>
+                          <p class="text-md-left">Live Competition</p>
                         </div>
                       </div>
                     </div><!--end date container-->
                     <!--button container-->
-                    <div class="row" style="padding-top: 5vh;">
-                      <div class="col-md-5">
-                        <button type="button" class="btn btn-primary btn-lg btn-block brandButton">Download Schedule</button>
+                    <div class="row">
+                      <div class="col-sm-12" style="padding-top: 2vh;">
+                        <a href="#" id="downloadLink"><h4>Download Full Schedule<h4></a>
+                      </div>
+                      <div class="col-sm-12" style="padding-top: 2vh;">
+                        <button type="button" class="btn btn-primary btn-lg brandButton">REGISTER</button>
                       </div>
                     </div>
                   </div> <!--end schedule text container-->
@@ -173,7 +177,7 @@
 
                 <!--rules-->
                 <div class="row container-fluid noSpace" id="rules">
-                  <div class="col-md-4">
+                  <div class="col-md-4" style="padding-left: 4em;">
                     <h1 class="bold">CONTEST<br>RULES</h1>
                   </div>
                   <div class="col-md-8">
