set up header section, not fully responsive for smaller screens

--- a/competition.html
+++ b/competition.html
@@ -41,12 +41,18 @@
             <div class="pure-pusher">
             <!--SITE CONTENT-->
               <!--HEADER SECTION-->
-              <div class="container-fluid" id="header">
-                <h1 class="red bold">Ctrl<span class="blue">+</span><i>Shift</i></h1>
-                <h1>June 23, 2018 Philadelphia, PA</h1>
-                <h1>Compete in Philadelphia's first citywide coding competition for high school students.</h1>
-                <button type="button" class="btn btn-primary brandButton">Register</button>
+              <div class="row align-items-end" id="header">
+                <div class="container" id="imgContainer">
+                  <!--<img src="./img/comp/ctrl.png" class="img-fluid" id="headerImg">-->
+                </div>
+                <div class="container-fluid" id="headerText">
+                  <h4><b>June 23, 2018 Philadelphia, PA</b></h4>
+                  <h5>Compete in Philadelphia's first citywide coding competition for high school students.</h5>
+                  <button type="button" class="btn btn-primary brandButton">Register</button>
+                </div>
+
               </div>
+
               <div class="noSpace container-fluid">
                 <!--jumbo image-->
                 <div class="row container-fluid noSpace">
