fixed header - works for now

--- a/competition.html
+++ b/competition.html
@@ -36,14 +36,22 @@
   <div id="page-content">
     <!--SITE CONTENT-->
     <!--HEADER SECTION-->
-    <div class="row align-items-end" id="header">
-      <div class="container" id="imgContainer">
+    <div class="container-fluid" style="padding-bottom: 5vh">
+      <!--<div class="container" id="imgContainer">-->
         <!--<img src="./img/comp/ctrl.png" class="img-fluid" id="headerImg">-->
-      </div>
+      <!--</div>
       <div class="container-fluid" id="headerText">
         <h4><b>June 23, 2018 Philadelphia, PA</b></h4>
         <h5>Compete in Philadelphia's first citywide coding competition for high school students.</h5>
         <button type="button" class="btn btn-primary brandButton">Register</button>
+      </div>-->
+      <div class="row-fluid" id="makedo">
+          <img src="./img/comp/ctrl.png" class="img-fluid">
+      </div>
+      <div class="row-fluid" id="makedoText">
+        <h4><b>June 23, 2018 Philadelphia, PA</b></h4>
+        <h5>Compete in Philadelphia's first citywide coding competition for high school students.</h5>
+        <a href="#register" class="btn btn-primary brandButton">Register</a>
       </div>
 
     </div>
