more header formatting

--- a/competition.html
+++ b/competition.html
@@ -64,8 +64,8 @@
 
       <!--brought by-->
       <div class="container-fluid noSpace" id="broughtBy">
-        <p>brought to you by:</p>
-        <img src="./img/logo-v5.png">
+        <!--<p>brought to you by:</p>
+        <img src="./img/logo-v5.png">-->
       </div>
 
       <!--code compete section-->
