added max height to image for chrome issue

--- a/competition.html
+++ b/competition.html
@@ -59,7 +59,7 @@
     <div class="noSpace container-fluid">
       <!--jumbo image-->
       <div class="row container-fluid noSpace">
-        <img src="./img/comp/main_image.jpg" class="img-fluid">
+        <img src="./img/comp/main_image.jpg" class="img-fluid" style="max-height: 100vh">
       </div>
 
       <!--brought by-->
