upped z index for sidenav, fixed link to footer

--- a/competition.html
+++ b/competition.html
@@ -30,7 +30,7 @@
       <li><a href="#schedule">SCHEDULE</a></li>
       <li><a href="#rules">RULES</a></li>
       <li><a href="#register">REGISTER</a></li>
-      <li><a href="#contact">CONTACT</a></li>
+      <li><a href="#compFooter">CONTACT</a></li>
     </ul>
   </nav>
   <div id="page-content">
